Contact Page Completed
added my socials and other contacts

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
                 </div>
 
                 <div class = "techStackContainer">
-                    <p class="sectiontitle">Technologies</p>
+                    <p class="sectiontitle">Technologies &lt;/&gt; </p>
                     <div class="techstack">
                         <div class="html">
                             <img class = "techlogos" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-plain.svg" />
@@ -151,16 +151,34 @@
 
                 <div class = "otherContacts">
                     <h1 class="sectiontitle" id="contactTitle">Let's Connect</h1>
+                    <p class="connect-subtext">Whether it’s about business or you just wanna chat, feel free to message me!</p>
+                        <div class="socials-grid">
+                                <img class="socials-pic" src="/githublight.png" id="ghlogo">
+                                <p class="socials1">jerichodgs</p>
+
+                                <img class="socials-pic" src="/linkedin.png" id="lilogo">
+                                <p class="socials2">Jericho Sineneng</p>
+
+                                <img class="socials-pic" src="/email.png" id="gmlogo">
+                                <p class="socials3">sinenengjericho0515@gmail.com</p>
+
+                                <img class="socials-pic" src="/phone.png" id="numlogo">
+                                <p class="socials4">+639686081534</p>
+
+                                <img class="socials-pic" src="/instagram.png" id="iglogo">
+                                <p class="socials5">@jerichodgs</p>
+                        </div>
                 </div>
+
+                <img src="/airplane.png" class="airplane">
 
             </div>
     </div>
 
+    <footer class="footer">
+        <p>© 2025 Jericho. All rights reserved.</p>
+    </footer>
+
     <script src = "script.js" ></script>
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
-      defer
-    ></script>
-    <script src="maps.js"></script>
 </body>
 </html>
