About section changes
decided to center it, it looked to cramped up before

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,12 @@
                     </span>
                 </label>
             </h1>
-            <h2 id = "heroSubtext">Website Developer from 🇵🇭</h2>
+
+            <div class="heroSubtext">
+                <h2 id = "subtextJunior">Junior Developer from</h2>
+                <img id="loclogo" src="/loc.png"><span class="phtext">🇵🇭</span></img>
+            </div>
+
             <p id = "heroCaption">Allow me to transform your <span class = "glow" id = "imaginative">imaginative</span> designs into fully 
                 functional websites.</p>
         </div>
@@ -52,10 +57,12 @@
 
                 <div class = "aboutTextContainer">
                     <div class = "aboutText">
-                        <p class="sectiontitle">Who I am<button class = "downloadCV">Download CV</button></p>
+                        <p class="sectiontitle" style="font-size: 3em;">Who is KoDevs?</p>
+                        <img src="/jokosmall.jpg" class="jokosmall">
                         <h1 class="myname">Jose Jericho D.G. Sineneng V</h1>
-                            <div class="locationlogo">
-                                <img class="loclogo" src="/loc.png"><h2 class = "location">Malolos, Bulacan, Philippines</h2>
+            
+                            <div class="aboutSubtext">
+                                <p class="location">Beginner Developer | Exploring Frontend & Backend</p>
                             </div>
                             <p class="aboutme">I am a Computer Engineering student at La Consolacion University Philippines, specializing in web development. With a solid foundation in <strong>HTML, CSS, and JavaScript</strong>, I am expanding my skills in React, Tailwind, and Node.js to build functional, real-world websites. I have deep passion for learning and creating solutions that are both practical and impactful.</p>
                     </div>
