Responsiveness update (unfinished)
aligned the elements to center and adjusted the sizes.

--- a/src/index.html
+++ b/src/index.html
@@ -24,14 +24,22 @@
                 <img id="emailLogo" src="/email2.svg">
             </a>
         </div>
+
+        <label class="switch-nav">
+            <input type="checkbox" id="theme-toggle-mobile" aria-label="Toggle theme">
+            <span class="slider">
+                <span class="icon sun">☀︎</span>
+                <span class="icon moon">☾</span>
+            </span>
+        </label>
     </nav>
 
 
     <div class = "heroContainer" id="home">
         <div class = "heroText">
             <h1 id = "heroTitle">Jericho Sineneng
-                <label class="switch">
-                    <input type="checkbox" id="theme-toggle" aria-label="Toggle theme">
+                <label class="switch-hero">
+                    <input type="checkbox" id="theme-toggle-desktop" aria-label="Toggle theme">
                     <span class="slider">
                         <span class="icon sun">☀︎</span>
                         <span class="icon moon">☾</span>
