--- a/src/index.html
+++ b/src/index.html
@@ -25,27 +25,31 @@
             </a>
         </div>
 
-        <label class="switch-nav">
+        <div class = "switchContainer">
+            <label class="switch-nav">
             <input type="checkbox" id="theme-toggle-mobile" aria-label="Toggle theme">
-            <span class="slider">
-                <span class="icon sun">☀︎</span>
-                <span class="icon moon">☾</span>
-            </span>
-        </label>
+                <span class="slider">
+                    <span class="icon sun">☀︎</span>
+                    <span class="icon moon">☾</span>
+                </span>
+            </label>
+        </div>
     </nav>
 
 
     <div class = "heroContainer" id="home">
-        <div class = "heroText">
-            <h1 id = "heroTitle">Jericho Sineneng
-                <label class="switch-hero">
+        
+        <label class="switch-hero">
                     <input type="checkbox" id="theme-toggle-desktop" aria-label="Toggle theme">
                     <span class="slider">
                         <span class="icon sun">☀︎</span>
                         <span class="icon moon">☾</span>
                     </span>
                 </label>
-            </h1>
+
+        <div class = "heroText">
+
+            <h1 id = "heroTitle">Jericho Sineneng</h1>
 
             <div class="heroSubtext">
                 <h2 id = "subtextJunior">Junior Developer from</h2>
