--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Trade+Winds&display=swap" rel="stylesheet">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="icon" type="image/png" href="/KDLogo.png">
+    <link rel="icon" type="image/png" href="KDLogo.png">
     <title>KoDevs</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
             <a class="link" href="#about">About</a>
             <a class="link" href="#projects">Projects</a>
             <a class="contactLink" href="#contact">
-                <img id="emailLogo" src="/email2.svg">
+                <img id="emailLogo" src="email2.svg">
             </a>
         </div>
 
@@ -53,13 +53,13 @@
 
             <div class="heroSubtext">
                 <h2 id = "subtextJunior">Junior Developer from</h2>
-                <img id="loclogo" src="/loc.png"><span class="phtext">🇵🇭</span></img>
+                <img id="loclogo" src="loc.png"><span class="phtext">🇵🇭</span></img>
             </div>
 
             <p id = "heroCaption">Allow me to transform your <span class = "glow" id = "imaginative">imaginative</span> designs into fully 
                 functional websites.</p>
         </div>
-        <img id = "mypic" src = "/heroimage.png">
+        <img id = "mypic" src = "heroimage.png">
     </div>
 
     <div class = "flexContainer" id="about">
@@ -70,7 +70,7 @@
                 <div class = "aboutTextContainer">
                     <div class = "aboutText">
                         <p class="sectiontitle" style="font-size: 3em;">Who is KoDevs?</p>
-                        <img src="/jokosmall.jpg" class="jokosmall">
+                        <img src="jokosmall.jpg" class="jokosmall">
                         <h1 class="myname">Jose Jericho D.G. Sineneng V</h1>
             
                             <div class="aboutSubtext">
@@ -104,7 +104,7 @@
                         </div>
 
                         <div class="github">
-                            <img class="techlogos" id="githublogo" src="/githublight.png">
+                            <img class="techlogos" id="githublogo" src="githublight.png">
                             <p>GITHUB</p>
                         </div>
                     </div>
@@ -119,7 +119,7 @@
         <div class="projectsContainer">
             <div class="project">
                 <h1 class="projectname1">Xiao Long & Ramen Express</h1>
-                <img class = "projectpic" id="projectpic1" src="/xlrepic.jfif">
+                <img class = "projectpic" id="projectpic1" src="xlrepic.jfif">
                 <p class = "projectdesc">My first ever try on a landing page, had some fun with this one trying out my skills.
                     Just suddenly thought of making a website for this restaurant because it is one of my
                     favorite spots here in Malolos!
@@ -130,12 +130,12 @@
                 <h1 class="projectname">UNDER CONSTRUCTION!</h1>
                 <p class = "projectdesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
                 </p>
-                <img class = "projectpic" id="projectpic2" src="/underconstruction.jpg">
+                <img class = "projectpic" id="projectpic2" src="underconstruction.jpg">
             </div>
 
             <div class="project">
                 <h1 class="projectname">UNDER CONSTRUCTION!</h1>
-                <img class = "projectpic" id="projectpic3" src="/underconstruction.jpg">
+                <img class = "projectpic" id="projectpic3" src="underconstruction.jpg">
                 <p class = "projectdesc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
                 </p>
             </div>
@@ -160,7 +160,7 @@
                             <textarea name="message" class="contactInputs" placeholder="Your Message" required></textarea>
 
                             <div class="sendContainer">
-                                <button type="submit" id="sendbtn">Send<img id="arrowsymbol" src="/arrow.png"></button>
+                                <button type="submit" id="sendbtn">Send<img id="arrowsymbol" src="arrow.png"></button>
                             </div>
 
                     </form>
@@ -172,24 +172,24 @@
                     <h1 class="sectiontitle" id="contactTitle">Let's Connect</h1>
                     <p class="connect-subtext">Whether it’s about business or you just wanna chat, feel free to message me!</p>
                         <div class="socials-grid">
-                                <img class="socials-pic" src="/githublight.png" id="ghlogo">
+                                <img class="socials-pic" src="githublight.png" id="ghlogo">
                                 <p class="socials1">jerichodgs</p>
 
-                                <img class="socials-pic" src="/linkedin.png" id="lilogo">
+                                <img class="socials-pic" src="linkedin.png" id="lilogo">
                                 <p class="socials2">Jericho Sineneng</p>
 
-                                <img class="socials-pic" src="/email.png" id="gmlogo">
+                                <img class="socials-pic" src="email.png" id="gmlogo">
                                 <p class="socials3">sinenengjericho0515@gmail.com</p>
 
-                                <img class="socials-pic" src="/phone.png" id="numlogo">
+                                <img class="socials-pic" src="phone.png" id="numlogo">
                                 <p class="socials4">+639686081534</p>
 
-                                <img class="socials-pic" src="/instagram.png" id="iglogo">
+                                <img class="socials-pic" src="instagram.png" id="iglogo">
                                 <p class="socials5">@jerichodgs</p>
                         </div>
                 </div>
 
-                <img src="/airplane.png" class="airplane">
+                <img src="airplane.png" class="airplane">
 
             </div>
     </div>
