bug fixes again

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         <img id = "mypic" src = "heroimage.png">
     </div>
 
-    <div class = "flexContainer" id="about">
+    <div class = "flexContainer" >
         <h1 class = "aboutSection">About</h1>
-        <div class = "aboutContainer">
+        <div class = "aboutContainer" id="about">
             <div class = "gridContainer">
 
                 <div class = "aboutTextContainer">
@@ -114,8 +114,8 @@
         </div>
     </div>
 
-    <div class="flexContainer" id="projects">
-        <h1 class = "projectsSection">Projects</h1>
+    <div class="flexContainer" >
+        <h1 class = "projectsSection" id="projects">Projects</h1>
         <div class="projectsContainer">
             <div class="project">
                 <h1 class="projectname1">Xiao Long & Ramen Express</h1>
