--- a/index.html
+++ b/index.html
@@ -36,21 +36,18 @@
         </div>
     </nav>
 
-
     <div class = "heroContainer" id="home">
         
         <label class="switch-hero">
-                    <input type="checkbox" id="theme-toggle-desktop" aria-label="Toggle theme">
-                    <span class="slider">
-                        <span class="icon sun">☀︎</span>
-                        <span class="icon moon">☾</span>
-                    </span>
-                </label>
+            <input type="checkbox" id="theme-toggle-desktop" aria-label="Toggle theme">
+            <span class="slider">
+                <span class="icon sun">☀︎</span>
+                <span class="icon moon">☾</span>
+            </span>
+        </label>
 
         <div class = "heroText">
-
             <h1 id = "heroTitle">Jericho Sineneng</h1>
-
             <div class="heroSubtext">
                 <h2 id = "subtextJunior">Junior Developer from</h2>
                 <img id="loclogo" src="loc.png"><span class="phtext">🇵🇭</span></img>
@@ -59,7 +56,7 @@
             <p id = "heroCaption">Allow me to transform your <span class = "glow" id = "imaginative">imaginative</span> designs into fully 
                 functional websites.</p>
         </div>
-        <img id = "mypic" src = "heroimage.png">
+        <img id = "mypic" src = "joko professional pic.png">
     </div>
 
     <div class = "flexContainer" >
@@ -70,7 +67,7 @@
                 <div class = "aboutTextContainer">
                     <div class = "aboutText">
                         <p class="sectiontitle" style="font-size: 3em;">Who is KoDevs?</p>
-                        <img src="jokosmall.jpg" class="jokosmall">
+                        <img src="joko-selfie.png" class="jokosmall">
                         <h1 class="myname">Jose Jericho D.G. Sineneng V</h1>
             
                             <div class="aboutSubtext">
@@ -119,7 +116,7 @@
         <div class="projectsContainer">
             <div class="project">
                 <h1 class="projectname1">Xiao Long & Ramen Express</h1>
-                <img class = "projectpic" id="projectpic1" src="xlrepic.jfif">
+                <img class = "projectpic" id="projectpic1" src="xlrev2.png">
                 <p class = "projectdesc">My first ever try on a landing page, had some fun with this one trying out my skills.
                     Just suddenly thought of making a website for this restaurant because it is one of my
                     favorite spots here in Malolos!
