--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
     <nav>
         <div class ="brandContainer">
-            <a href="#" id="brandName">KoDevs/></a>
+            <a href="#home-point" id="brandName">KoDevs/></a>
         </div>
 
         <div class ="linksContainer">
-            <a class="link" href="#">Home</a>
-            <a class="link" href="#about">About</a>
+            <a class="link" href="#home-point">Home</a>
+            <a class="link" href="#about-point">About</a>
             <a class="link" href="#projects">Projects</a>
             <a class="contactLink" href="#contact">
                 <img id="emailLogo" src="email2.svg">
@@ -36,7 +36,7 @@
         </div>
     </nav>
 
-    <div class = "heroContainer" id="home">
+    <div class = "heroContainer" id="home-point">
         
         <label class="switch-hero">
             <input type="checkbox" id="theme-toggle-desktop" aria-label="Toggle theme">
@@ -59,7 +59,7 @@
         <img id = "mypic" src = "joko professional pic.png">
     </div>
 
-    <div class = "flexContainer" >
+    <div class = "flexContainer" id="about-point">
         <h1 class = "aboutSection">About</h1>
         <div class = "aboutContainer" id="about">
             <div class = "gridContainer">
