--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
             <a href="#home-point" id="brandName">KoDevs/></a>
         </div>
 
+        <div class="hamburger" id="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+
         <div class ="linksContainer">
             <a class="link" href="#home-point">Home</a>
             <a class="link" href="#about-point">About</a>
@@ -35,6 +41,23 @@
             </label>
         </div>
     </nav>
+
+    <div class="mobile-menu" id="mobile-menu">
+    <a class="link" href="#home-point">Home</a>
+    <a class="link" href="#about-point">About</a>
+    <a class="link" href="#projects">Projects</a>
+    <a class="link" href="#contact">Contact</a>
+
+        <div class="mobile-menu-toggle">
+            <label class="switch-mobile-menu">
+                <input type="checkbox" id="theme-toggle-mobile-menu" aria-label="Toggle theme">
+                <span class="slider">
+                    <span class="icon sun">☀︎</span>
+                    <span class="icon moon">☾</span>
+                </span>
+            </label>
+        </div>
+    </div>
 
     <div class = "heroContainer" id="home-point">
         
