Some fonts, box-shadows, and size adjustments. added tech used in projects.

--- a/index.html
+++ b/index.html
@@ -118,8 +118,6 @@
                             <p>JS</p>
                         </div>
 
-                     
-
                         <div class="github">
                             <img class="techlogos" id="githublogo" src="githublight.png">
                             <p>GITHUB</p>
@@ -141,6 +139,7 @@
                     Just suddenly thought of making a website for this restaurant because it is one of my
                     favorite spots here in Malolos!
                 </p>
+                <p class="projecttech">Technologies used: HTML CSS JS</p>
             </div>
 
             <div class="project2">
