minor design adjustments

--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
             <div class="project">
                 <h1 class="projectname1">Xiao Long & Ramen Express</h1>
                 <img class = "projectpic" id="projectpic1" src="xlrev2.png">
-                <p class = "projectdesc">My first ever try on a landing page, had some fun with this one trying out my skills.
+                <p class = "projectdesc">My first ever try on a landing page,
+                    had some fun with this one trying out my skills.
                     Just suddenly thought of making a website for this restaurant because it is one of my
                     favorite spots here in Malolos!
                 </p>
