adjusted hero section gap

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <nav>
     <div class="brandContainer">
-        <a href="#home-point" id="brandName">KoDevs/></a>
+        <a href="#home-point" id="brandName">KoDevs</a>
         <label class="switch">
             <input type="checkbox" id="theme-toggle-desktop" aria-label="Toggle theme">
             <span class="slider">
@@ -99,7 +99,7 @@
                     <h1 class="myname">Jose Jericho D.G. Sineneng V</h1>
 
                     <div class="aboutSubtext">
-                        <p class="location">Beginner Developer | Exploring Frontend & Backend</p>
+                        <p class="location">Junior Frontend Developer | Exploring Backend</p>
                     </div>
 
                     <p class="aboutme">
