added a new project in progress, fixed description formats

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Trade+Winds&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="./src/images/kdlogo-outlined.png">
     <title>KoDevs</title>
 </head>
@@ -149,29 +150,35 @@
         <div class="project">
             <h1 class="projectname1">Xiao Long & Ramen Express</h1>
             <img class="projectpic" id="projectpic1" src="./src/images/xlrev2.png" alt="Project 1">
-            <p class="projectdesc">
-                My first ever try on a landing page, had some fun with this one trying out my skills.
-                Just suddenly thought of making a website for this restaurant because it is one of my
-                favorite spots here in Malolos!
-            </p>
+            <div class="desc-container">
+                <p class="projectdesc">
+                    My first ever try on a landing page, had some fun with this one trying out my skills.
+                    Just suddenly thought of making a website for this restaurant because it is one of my
+                    favorite spots here in Malolos!
+                </p>
+            </div>
             <p class="projecttech">Technologies used: HTML CSS JS</p>
         </div>
 
         <div class="project2">
-            <h1 class="projectname">UNDER CONSTRUCTION!</h1>
-            <p class="projectdesc">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
-            </p>
-            <!-- exact file: underconstruction.jpg -->
-            <img class="projectpic" id="projectpic2" src="./src/images/underconstruction.jpg" alt="Under Construction">
+            <h1 class="projectname2">Consolocate - Campus Navigation Kiosk <span>(In Progress)</span> </h1>
+            <div class="desc-container">
+                <p class="projectdesc">
+                    This is our group project and my first time working with collaborators on something this big. We’re building an interactive campus navigation system for LCUP, and it’s been really exciting learning how to work as a team, share ideas, and combine everything into one real, working application.
+                </p>
+            </div>
+            <p class="projecttech">Technologies used: HTML CSS JS</p>
+            <img class="projectpic" id="projectpic2" src="./src/images/consolocateimg.png" alt="Under Construction">
         </div>
 
         <div class="project">
             <h1 class="projectname">UNDER CONSTRUCTION!</h1>
             <img class="projectpic" id="projectpic3" src="./src/images/underconstruction.jpg" alt="Under Construction">
-            <p class="projectdesc">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
-            </p>
+            <div class="desc-container">
+                <p class="projectdesc">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
+                </p>
+            </div>
         </div>
 
     </div>
