--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 </div>
 
 <footer class="footer">
-    <p>© 2025 Jericho. All rights reserved.</p>
+    <p>© 2025 Jericho Sineneng. All rights reserved.</p>
 </footer>
 
 <script src="script.js"></script>
