--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
         <a class="link" href="#home-point">Home</a>
         <a class="link" href="#about-point">About</a>
         <a class="link" href="#projects">Projects</a>
-        <a class="contactLink" href="#contact">
-            <img id="emailLogo" src="./src/images/email2.svg" alt="Email">
-        </a>
     </div>
+
+    <a class="contactLink" href="#contact">
+        <img id="emailLogo" src="./src/images/email-white.png" alt="Email">
+    </a>
 
     <div class="switch-hb-container">
         <label class="switch-nav">
@@ -52,13 +53,6 @@
 </nav>
 
 <div class="mobile-menu" id="mobile-menu">
-    <div class="menu-header">
-        <div class="hamburger inner-hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-    </div>
     <a class="link" id="home-link" href="#home-point">Home</a>
     <a class="link" href="#about-point">About</a>
     <a class="link" href="#projects">Projects</a>
@@ -225,7 +219,7 @@
                 <img class="socials-pic" src="./src/images/linkedin.png" id="lilogo" alt="LinkedIn">
                 <p class="socials2">Jericho Sineneng</p>
 
-                <img class="socials-pic" src="./src/images/email.png" id="gmlogo" alt="Email">
+                <img class="socials-pic" src="./src/images/email-contact.png" id="gmlogo" alt="Email">
                 <p class="socials3">sinenengjericho0515@gmail.com</p>
 
                 <img class="socials-pic" src="./src/images/phone.png" id="numlogo" alt="Phone">
