changed hero page layout

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <nav>
     <div class="brandContainer">
-        <a href="#home-point" id="brandName">KoDevs</a>
+        <a href="#home-point" id="brandName">KD</a>
         <label class="switch">
             <input type="checkbox" id="theme-toggle-desktop" aria-label="Toggle theme">
             <span class="slider">
@@ -64,6 +64,7 @@
 <div class="heroContainer" id="home-point">
 
     <div class="heroText">
+        <p class="hello-text">Hello World 👋, I'm</p>
         <h1 id="heroTitle">Jericho Sineneng</h1>
         <div class="heroSubtext">
             <h2 id="subtextJunior">Junior Developer from</h2>
@@ -76,10 +77,20 @@
             <span class="glow" id="imaginative">imaginative</span> designs 
             into fully functional websites.
         </p>
+
+        <div class="hero-buttons">
+            <a class="viewcv-button" href="https://drive.google.com/file/d/1S9eKaGAq0RfQ68wTMPJEYn5ltE4Wrfu_/view?usp=sharing" target="_blank">View CV</a>
+            <a class="hero-link" href="https://github.com/jerichodgs" target="_blank">
+                <img class="gh-link" src="./src/images/githublight.png  " alt="Email">
+            </a>
+            <a class="hero-link" href="https://www.linkedin.com/in/jose-jericho-sineneng-2b5920382/" target="_blank">
+                <img class="li-link" src="./src/images/linkedin1.png" alt="Email">
+            </a>
+        </div>
+
     </div>
 
-    <!-- exact filename includes spaces -->
-    <img id="mypic" src="./src/images/joko professional pic.png" alt="Jericho Photo">
+    <img id="mypic" src="/src/images/joko professional pic.png" alt="hero-pic">
 </div>
 
 <div class="flexContainer" id="about-point">
@@ -151,7 +162,7 @@
                     favorite spots here in Malolos!
                 </p>
             </div>
-            <p class="projecttech">Technologies used: HTML CSS JS</p>
+            <p class="projecttech">HTML • CSS • JavaScript</p>
         </div>
 
         <div class="project2">
@@ -161,7 +172,7 @@
                     This is our group project and my first time working with collaborators on something this big. We’re building an interactive campus navigation system for LCUP, and it’s been really exciting learning how to work as a team, share ideas, and combine everything into one real, working application.
                 </p>
             </div>
-            <p class="projecttech">Technologies used: HTML CSS JS</p>
+            <p class="projecttech">ASP.NET Core MVC • Azure SQL • HTML • CSS • JavaScript</p>
             <img class="projectpic" id="projectpic2" src="./src/images/consolocateimg.png" alt="Under Construction">
         </div>
 
