page reveal animations

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 
 <div class="menu-overlay"></div>
 
-<div class="heroContainer" id="home-point">
+<!-- HERO -->
+<div class="heroContainer reveal" id="home-point">
 
     <div class="heroText">
         <p class="hello-text">Hello World 👋, I'm</p>
@@ -87,13 +88,13 @@
                 <img class="li-link" src="./src/images/linkedin1.png" alt="Email">
             </a>
         </div>
-
     </div>
 
     <img id="mypic" src="/src/images/joko professional pic.png" alt="hero-pic">
 </div>
 
-<div class="flexContainer" id="about-point">
+<!-- ABOUT -->
+<div class="flexContainer reveal" id="about-point">
     <h1 class="aboutSection">About</h1>
     <div class="aboutContainer" id="about">
         <div class="gridContainer">
@@ -148,7 +149,8 @@
     </div>
 </div>
 
-<div class="flexContainer">
+<!-- PROJECTS -->
+<div class="flexContainer reveal">
     <h1 class="projectsSection" id="projects">Projects</h1>
     <div class="projectsContainer">
 
@@ -189,7 +191,8 @@
     </div>
 </div>
 
-<div class="flexContainer" id="contact">
+<!-- CONTACT -->
+<div class="flexContainer reveal" id="contact">
     <h1 class="contactSection">Let's Talk!</h1>
 
     <div class="contactContainer">
@@ -251,5 +254,6 @@
 </footer>
 
 <script src="script.js"></script>
+
 </body>
 </html>
